# easy_bookmarks

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  image_extraction.py  pyproject.toml
config/: integration_config.yaml
easy_bookmark/: notion_uploader.py
easy_bookmark/extraction/: image_extraction.py
easy_bookmark/prompts/: prompts.py
easy_bookmark/utils/: img_converter.py
easy_bookmarks/: __init__.py  cli.py
easy_bookmarks/digestors/: base_digestor.py  newsletter.py  podcaster.py  summarizer.py
easy_bookmarks/integrations/: __init__.py  base_integration.py  linkedin.py  webpage.py
easy_bookmarks/integrations/pic2bookmark/: notion_uploader.py  telegram_bot.py
easy_bookmarks/integrations/pic2bookmark/demo_outputs/: estres_tibial.txt
easy_bookmarks/integrations/pic2bookmark/extraction/: image_extraction.py
easy_bookmarks/stores/: __init__.py  notion_store.py  sqlite_store.py  utils.py
examples/: sqlite_store.ipynb
examples/digestors/: newsletter.ipynb  podcaster.ipynb  summarizer.ipynb
examples/integrations/: linkedin_bookmarks.ipynb  webpage.ipynb
examples/stores/: notion.ipynb  sqlite_store.ipynb
integrations/: lkd.ipynb
outputs/: shuttle_bus.md  shuttle_bus.txt
pic2bookmark/: notion_uploader.py  telegram_bot.py
pic2bookmark/extraction/: image_extraction.py
pic2bookmark/outputs/: lesiones_habituales.txt  shuttle_bus.md
pic2bookmark/prompts/: llm_calls.py
pic2bookmark/utils/: available_languages.py
prompts/: create_LLM_call.py  extract_img_lang.py  llm_calls.py
