[tool.poetry]
name = "easy_bookmarks"
version = "0.1.0"
description = "Redefine your bookmarks"
authors = ["CarlosVecina <carlosvecinatebar@gmail.com>", "Ana Barbero <anabarberocastejon@gmail.com>"]
readme = "README.md"

packages = [{include = "easy_bookmarks", from = "."}]

[project.scripts]
easy-bookmarks = "easy_bookmarks.cli:cli"


[tool.poetry.dependencies]
python = "~3.11"
easyocr = "^1.7.1"
openai = "^1.35.10"
python-dotenv = "^1.0.1"
python-telegram-bot = "^21.3"
requests = "^2.32.3"
linkedin-api = "2.2.0"
adalflow = "^0.2.2"
selenium = "^4.24.0"
webdriver-manager = "^4.0.2"
notion-client = "^2.2.1"
pydantic-settings = "^2.5.2"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
